2008-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Font.cs: Fix GetHashCode to use the same values as Equals. Fix 
	bug #351647

2007-12-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Graphics.cs: Fix Point/PointF typo in FromUnManagedMemoryToPoint.
	Added a few space to make it easier to read those methods. Fix #349800

2007-12-16  Miguel de Icaza  <miguel@novell.com>

	* Image.cs: Use the existing GdipPropertyItem.MarshalTo method to
	conver the PropertyItem into a property item with Sequential
	attached to it, and pass that to unmanaged code.   Fixes #349103.

2007-12-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Bitmap.jvm.cs: ArgumentException on unknown format from stream

2007-12-07  Geoff Norton  <gnorton@novell.com>

	* Graphics.cs: Ensure that we Flush and Synchornize our CGContexts
	before disposing.  Fixes drawing bugs when drawn out of the event
	loop and the caller doesn't Flush.
	* carbonFunctions.cs: Rework the cross-assembly data marshalling to
	use a delegate as suggested by lupus.

2007-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAnimator.cs: Check for FrameDimension.Time availability before
	asking the frame count (since MS GDI+ prefers to return an error than
	saying it has a single frame). Fix bug #342733

2007-11-15  Geoff Norton  <gnorton@novell.com>

	* gdipFunctions.cs: Reflect the renamed environment variable in the new Carbon driver.
	* Graphics.cs: Remove support for the deprecated Cocoa driver until its fixed.

2007-11-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ColorTranslator.cs: Special case handling for LightGray versus 
	HTML's LightGrey. Fix bug #340917.

2007-11-07  Geoff Norton  <gnorton@novell.com>

	* carbonFunctions.cs: 
	* Graphics.cs: Use QDBeginCGContext / QDEndCGContext to leverage OS caching
	of CGContexts when possible.  If we are still using the context returned by
	QDBeginCGContext, then create a new CGContext for this graphics object.

2007-11-07  Geoff Norton  <gnorton@novell.com>